--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -99,6 +99,7 @@
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
+    "deploy": "gatsby-plugin-s3 deploy",
     "clean": "rm -rf public && rm -rf .cache",
     "lint:js": "eslint --ext .js,.jsx .",
     "lint:md": "remark content/",
