--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -37,6 +37,9 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Install npm@7
+        run: npm install -g npm@7
+
       - uses: bahmutov/npm-install@v1
         with:
           working-directory: gatsby
