--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-lodash": "^4.4.0",
     "gatsby-plugin-no-sourcemaps": "^3.4.0",
     "gatsby-plugin-nprogress": "^3.4.0",
+    "gatsby-plugin-postcss": "^4.4.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sharp": "^3.4.0",
@@ -34,6 +35,7 @@
     "gravatar": "^1.8.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "postcss": "^7.0.35",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.10.0",
@@ -80,9 +82,6 @@
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.4",
     "source-map-explorer": "^2.5.0",
-    "stylelint": "^11.0.0",
-    "stylelint-config-prettier": "^6.0.0",
-    "stylelint-config-standard": "^19.0.0",
     "typescript-eslint-parser": "^22.0.0",
     "write-good": "^1.0.3"
   },
