Setup Goodreads data to be SSR
Convert Gatsby config to Typescript

--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,6 +5,7 @@
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
+    "axios": "^0.19.2",
     "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
     "gatsby": "^3.4.0",
@@ -12,7 +13,6 @@
     "gatsby-plugin-catch-links": "^3.4.0",
     "gatsby-plugin-feed": "^3.4.0",
     "gatsby-plugin-google-analytics": "^3.4.0",
-    "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-lodash": "^4.4.0",
     "gatsby-plugin-no-sourcemaps": "^3.4.0",
     "gatsby-plugin-nprogress": "^3.4.0",
@@ -22,6 +22,7 @@
     "gatsby-plugin-sharp": "^3.4.0",
     "gatsby-plugin-sitemap": "^4.0.0",
     "gatsby-plugin-styled-components": "^4.4.0",
+    "gatsby-plugin-ts-config": "^1.1.5",
     "gatsby-plugin-twitter": "^3.4.0",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typescript": "^3.4.0",
@@ -36,6 +37,7 @@
     "gatsby-transformer-sharp": "^3.4.0",
     "gravatar": "^1.8.1",
     "js-cookie": "^2.2.1",
+    "jsdom": "^16.5.3",
     "lodash": "^4.17.20",
     "postcss": "^7.0.35",
     "prismjs": "^1.23.0",
@@ -64,6 +66,7 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.27",
+    "@types/jsdom": "^16.2.10",
     "@types/lodash": "^4.14.164",
     "@types/react-helmet": "^5.0.16",
     "@types/react-lazy-load-image-component": "^1.5.1",
