--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -102,7 +102,7 @@
     "serve": "gatsby serve",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
-    "build:gh-actions": "npm run build:pp && npm run stats:html",
+    "build:gh-actions": "npm run build:pp",
     "deploy": "gatsby-plugin-s3 deploy",
     "clean": "rm -rf public && rm -rf .cache",
     "lint:js": "eslint --ext .js,.jsx .",
