Wow I guess it just works now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       STAGE: 'local'
       WEBSOCKET: 'true'
       TEST_CDN: 'true'
+      ACCESS_LOG: stdout
     networks:
       backend: {}
     volumes:
