--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-google-analytics": "^3.4.0",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-lodash": "^4.4.0",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-no-sourcemaps": "^3.4.0",
     "gatsby-plugin-nprogress": "^3.4.0",
     "gatsby-plugin-postcss": "^4.4.0",
