--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,4 +1,4 @@
-FROM golang:1.14
+FROM golang:1.16
 
 # Install deps to install packages
 RUN apt-get update \
@@ -8,7 +8,7 @@ RUN apt-get update \
 # Install go-watcher for auto rebuilds during development
 # Install goose for database migrations
 RUN go get github.com/canthefason/go-watcher \
-    && go install github.com/canthefason/go-watcher/cmd/watcher \
+    && go install github.com/canthefason/go-watcher/cmd/watcher@latest \
     && go get github.com/pressly/goose/cmd/goose
 
 # Install go dependencies
