Get the JSON sqlite stuff working in dev!
Update API endpoints for gatsby to be prod

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     environment:
       AUTH_USER: eligundry
       AUTH_PASSWORD: password
+      CGO_CFLAGS: "-DSQLITE_ENABLE_JSON1"
     networks:
       backend: {}
     volumes:
