--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -58,7 +58,7 @@
     "react-twitter-widgets": "^1.9.5",
     "react-use": "^13.27.1",
     "rehype-react": "^4.0.1",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.3.0",
     "tailwindcss": "^2.1.2",
     "twin.macro": "^2.4.1",
     "typescript": "^4.2.4",
@@ -71,7 +71,7 @@
     "@types/react-helmet": "^5.0.16",
     "@types/react-lazy-load-image-component": "^1.5.1",
     "@types/react-lazyload": "^2.6.0",
-    "@types/styled-components": "^5.1.4",
+    "@types/styled-components": "^5.1.9",
     "@types/tailwindcss": "^2.0.2",
     "babel-plugin-styled-components": "^1.11.1",
     "cli-glob": "^0.1.0",
@@ -109,7 +109,8 @@
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
     "format:styles": "prettier '**/*.{css,scss}' --write",
-    "stats:html": "source-map-explorer public/*.js --html public/stats.html"
+    "stats:html": "source-map-explorer public/*.js --html public/stats.html",
+    "type-check": "tsc --noEmit"
   },
   "remarkConfig": {
     "plugins": [
