--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -53,11 +53,13 @@
     "react-lazy-load-image-component": "^1.5.0",
     "react-lazyload": "^2.6.9",
     "react-query": "^2.25.2",
+    "react-schemaorg": "^1.3.1",
     "react-tooltip": "^4.2.10",
     "react-twitter-embed": "^3.0.3",
     "react-twitter-widgets": "^1.9.5",
     "react-use": "^13.27.1",
     "rehype-react": "^4.0.1",
+    "schema-dts": "^0.8.2",
     "styled-components": "^5.3.0",
     "tailwindcss": "^2.1.2",
     "twin.macro": "^2.4.1",
