--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+      - gatsby-learnings
 
 jobs:
   api:
@@ -20,36 +21,10 @@ jobs:
       - name: Docker Push
         run: docker push eligundry/api.eligundry.com
 
-  frontend:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: azure/docker-login@v1
-        with:
-          username: eligundry
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: satackey/action-docker-layer-caching@v0.0.8
-        continue-on-error: true
-
-      - name: Docker Build
-        run: docker build -t eligundry/website.eligundry.com -f Dockerfile.frontend .
-
-      - name: Upload assets to CDN
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACES_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACES_SECRET }}
-          DO_SPACES_ENDPOINT: "https://nyc3.digitaloceanspaces.com" 
-          DO_SPACES_BUCKET: nyc-cdn.eligundry.com
-        run: ./scripts/deploy-assets.sh
-
-      - name: Docker Push
-        run: docker push eligundry/website.eligundry.com
-
   deploy:
     runs-on: ubuntu-latest
     needs:
       - api
-      - frontend
     steps:
       - uses: actions/checkout@v2
 
