--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,63 +5,76 @@
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
+    "axios": "^0.19.2",
     "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
-    "gatsby": "^2.25.1",
+    "gatsby": "^3.4.0",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-catch-links": "^2.3.15",
-    "gatsby-plugin-feed": "^2.6.0",
-    "gatsby-plugin-google-analytics": "^2.4.0",
-    "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-lodash": "^3.3.13",
-    "gatsby-plugin-no-sourcemaps": "^2.2.1",
-    "gatsby-plugin-nprogress": "^2.3.13",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.7.0",
-    "gatsby-plugin-sitemap": "^2.5.0",
-    "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-plugin-twitter": "^2.3.12",
-    "gatsby-plugin-typescript": "^2.5.0",
-    "gatsby-remark-autolink-headers": "^2.4.0",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
-    "gatsby-remark-images": "^3.4.0",
-    "gatsby-remark-prismjs": "^3.6.0",
-    "gatsby-remark-responsive-iframe": "^2.4.17",
-    "gatsby-source-filesystem": "^2.4.0",
-    "gatsby-transformer-remark": "2.8.29",
-    "gatsby-transformer-sharp": "^2.5.21",
+    "gatsby-plugin-catch-links": "^3.4.0",
+    "gatsby-plugin-feed": "^3.4.0",
+    "gatsby-plugin-google-analytics": "^3.4.0",
+    "gatsby-plugin-image": "^1.5.0",
+    "gatsby-plugin-lodash": "^4.4.0",
+    "gatsby-plugin-no-sourcemaps": "^3.4.0",
+    "gatsby-plugin-nprogress": "^3.4.0",
+    "gatsby-plugin-postcss": "^4.4.0",
+    "gatsby-plugin-react-helmet": "^4.4.0",
+    "gatsby-plugin-sharp": "^3.4.0",
+    "gatsby-plugin-sitemap": "^4.0.0",
+    "gatsby-plugin-styled-components": "^4.4.0",
+    "gatsby-plugin-ts-config": "^1.1.5",
+    "gatsby-plugin-twitter": "^3.4.0",
+    "gatsby-plugin-typegen": "^2.2.4",
+    "gatsby-plugin-typescript": "^3.4.0",
+    "gatsby-remark-autolink-headers": "^4.1.0",
+    "gatsby-remark-copy-linked-files": "^4.1.0",
+    "gatsby-remark-images": "^5.1.0",
+    "gatsby-remark-prismjs": "^5.1.0",
+    "gatsby-remark-responsive-iframe": "^4.1.0",
+    "gatsby-source-custom-api": "^2.1.4",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-remark": "^4.1.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "gravatar": "^1.8.1",
     "js-cookie": "^2.2.1",
+    "jsdom": "^16.5.3",
     "lodash": "^4.17.20",
-    "prismjs": "^1.22.0",
-    "react": "^16.14.0",
+    "postcss": "^7.0.35",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.2",
     "react-chartjs-2": "^2.10.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-github-calendar": "^2.0.2",
     "react-goodreads": "^1.0.8",
     "react-goodreads-shelf": "1.1.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-image-lightbox": "^5.1.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-lazyload": "^2.6.9",
     "react-query": "^2.25.2",
+    "react-schemaorg": "^1.3.1",
     "react-tooltip": "^4.2.10",
     "react-twitter-embed": "^3.0.3",
     "react-twitter-widgets": "^1.9.5",
     "react-use": "^13.27.1",
     "rehype-react": "^4.0.1",
-    "styled-components": "^5.2.1",
-    "twin.macro": "^1.12.0",
+    "schema-dts": "^0.8.2",
+    "styled-components": "^5.3.0",
+    "tailwindcss": "^2.1.2",
+    "twin.macro": "^2.4.1",
+    "typescript": "^4.2.4",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.27",
+    "@types/jsdom": "^16.2.10",
     "@types/lodash": "^4.14.164",
     "@types/react-helmet": "^5.0.16",
     "@types/react-lazy-load-image-component": "^1.5.1",
     "@types/react-lazyload": "^2.6.0",
-    "@types/styled-components": "^5.1.4",
+    "@types/styled-components": "^5.1.9",
+    "@types/tailwindcss": "^2.0.2",
     "babel-plugin-styled-components": "^1.11.1",
     "cli-glob": "^0.1.0",
     "eslint": "^6.8.0",
@@ -71,16 +84,10 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-plugin-zopfli": "^2.0.0",
-    "gh-pages": "^2.2.0",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.4",
     "source-map-explorer": "^2.5.0",
-    "stylelint": "^11.0.0",
-    "stylelint-config-prettier": "^6.0.0",
-    "stylelint-config-standard": "^19.0.0",
-    "typescript": "^3.9.7",
     "typescript-eslint-parser": "^22.0.0",
     "write-good": "^1.0.3"
   },
@@ -96,14 +103,16 @@
     "serve": "gatsby serve",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
-    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
+    "build:gh-actions": "npm run build:pp",
+    "deploy": "gatsby-plugin-s3 deploy",
     "clean": "rm -rf public && rm -rf .cache",
     "lint:js": "eslint --ext .js,.jsx .",
     "lint:md": "remark content/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
     "format:styles": "prettier '**/*.{css,scss}' --write",
-    "stats:html": "source-map-explorer public/*.js --html public/stats.html"
+    "stats:html": "source-map-explorer public/*.js --html public/stats.html",
+    "type-check": "tsc --noEmit"
   },
   "remarkConfig": {
     "plugins": [
@@ -122,7 +131,6 @@
       "config": "src/tailwind.config.js",
       "preset": "styled-components",
       "autoCssProp": true,
-      "debugProp": true,
       "debugPlugins": false,
       "debug": false
     }
