--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -105,7 +105,7 @@
     "build:pp": "gatsby build --prefix-paths",
     "build:gh-actions": "npm run build:pp",
     "deploy": "gatsby-plugin-s3 deploy",
-    "clean": "rm -rf public && rm -rf .cache",
+    "clean": "gatsby clean",
     "lint:js": "eslint --ext .js,.jsx .",
     "lint:md": "remark content/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
