--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -6,7 +6,8 @@
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
     "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.3.2",
+    "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "date-fns": "^2.16.1",
     "gatsby": "^3.6.0",
     "gatsby-image": "^2.4.21",
@@ -40,7 +41,7 @@
     "postcss": "^8.3.0",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
-    "react-chartjs-2": "^2.10.0",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^2.0.2",
     "react-helmet": "^6.1.0",
@@ -61,7 +62,6 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
-    "@types/chart.js": "^2.9.27",
     "@types/jsdom": "^16.2.10",
     "@types/lodash": "^4.14.170",
     "@types/react-helmet": "^5.0.16",
