--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -54,6 +54,7 @@
     "react-twitter-widgets": "^1.9.5",
     "react-use": "^13.27.1",
     "schema-dts": "^0.8.2",
+    "simple-git": "^2.40.0",
     "styled-components": "^5.3.0",
     "tailwindcss": "^2.1.2",
     "twin.macro": "^2.4.1",
