--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^3.3.2",
     "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "date-fns": "^2.22.1",
+    "dotenv": "^8.6.0",
     "gatsby": "^3.7.2",
     "gatsby-plugin-catch-links": "^3.7.1",
     "gatsby-plugin-feed": "^3.7.1",
@@ -33,6 +34,7 @@
     "gatsby-remark-responsive-iframe": "^4.4.1",
     "gatsby-source-custom-api": "^2.1.4",
     "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-source-lastfm": "^0.1.2",
     "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.7.1",
     "jsdom": "^16.5.3",
