--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -41,6 +41,7 @@
     "jsdom": "^16.5.3",
     "lodash": "^4.17.21",
     "postcss": "^8.3.0",
+    "postscribe": "^2.0.8",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
