--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,6 +5,8 @@
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "axios": "^0.21.1",
     "chart.js": "^3.3.2",
     "chartjs-adapter-date-fns": "^1.1.0-beta.1",
@@ -16,6 +18,7 @@
     "gatsby-plugin-google-tagmanager": "^3.7.1",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-lodash": "^4.7.1",
+    "gatsby-plugin-mdx": "^2.8.0",
     "gatsby-plugin-nprogress": "^3.7.1",
     "gatsby-plugin-postcss": "^4.7.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
@@ -27,7 +30,6 @@
     "gatsby-plugin-twitter": "^3.7.1",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typescript": "^3.7.1",
-    "gatsby-remark-autolink-headers": "^4.4.1",
     "gatsby-remark-copy-linked-files": "^4.4.1",
     "gatsby-remark-images": "^5.4.1",
     "gatsby-remark-prismjs": "^5.4.1",
@@ -35,11 +37,11 @@
     "gatsby-source-custom-api": "^2.1.4",
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-source-lastfm": "^0.1.2",
-    "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.7.1",
     "jsdom": "^16.5.3",
     "lodash": "^4.17.21",
     "postcss": "^8.3.0",
+    "postscribe": "^2.0.8",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
