--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eligundry.com",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
-  "version": "1.1.0",
+  "description": "Eli Gundry's personal website",
+  "version": "3.0.0",
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
