--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-twitter": "^3.7.1",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typescript": "^3.7.1",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^4.4.1",
     "gatsby-remark-images": "^5.4.1",
     "gatsby-remark-prismjs": "^5.4.1",
