--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -132,5 +132,95 @@
       "debugPlugins": false,
       "debug": false
     }
+  },
+  "browserslist": [
+    "last 2 versions",
+    ">1%",
+    "not IE 11",
+    "not ie_mob 11"
+  ],
+  "eslintConfig": {
+    "extends": [
+      "airbnb",
+      "prettier",
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint"
+    ],
+    "plugins": [
+      "react",
+      "jsx-a11y",
+      "import"
+    ],
+    "ignorePatterns": [
+      "public",
+      "static",
+      ".cache",
+      "content"
+    ],
+    "rules": {
+      "react/prefer-stateless-function": "off",
+      "react/prop-types": "off",
+      "react/no-danger": "off",
+      "react/destructuring-assignment": "off",
+      "react/no-unescaped-entities": "off",
+      "react/jsx-one-expression-per-line": "off",
+      "react/jsx-props-no-spreading": "off",
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
+      "jsx-a11y/anchor-is-valid": [
+        "error",
+        {
+          "components": [
+            "Link"
+          ],
+          "specialLink": [
+            "hrefLeft",
+            "hrefRight",
+            "to"
+          ],
+          "aspects": [
+            "noHref",
+            "invalidHref",
+            "preferButton"
+          ]
+        }
+      ],
+      "react/jsx-filename-extension": [
+        1,
+        {
+          "extensions": [
+            ".tsx",
+            ".jsx"
+          ]
+        }
+      ],
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "js": "never",
+          "mjs": "never",
+          "jsx": "never",
+          "ts": "never",
+          "tsx": "never"
+        }
+      ]
+    },
+    "settings": {
+      "import/core-modules": [],
+      "import/resolver": {
+        "node": {
+          "extensions": [
+            ".js",
+            ".jsx",
+            ".ts",
+            ".tsx"
+          ]
+        }
+      }
+    },
+    "env": {
+      "browser": true
+    }
   }
 }
