--- a/gatsby/tsconfig.json
+++ b/gatsby/tsconfig.json
@@ -15,5 +15,5 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": ["gatsby-types.d.ts", "src", "twin.d.ts", "static", "index.d.ts"]
+  "include": ["gatsby-types.d.ts", "src", "static", "index.d.ts"]
 }
