--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -74,14 +74,13 @@
     "@types/react-lazyload": "^3.1.0",
     "@types/styled-components": "^5.1.9",
     "@types/tailwindcss": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "babel-plugin-styled-components": "^1.11.1",
     "cli-glob": "^0.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.4",
@@ -143,14 +142,9 @@
     "extends": [
       "airbnb",
       "prettier",
-      "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint"
+      "plugin:@typescript-eslint/recommended"
     ],
-    "plugins": [
-      "react",
-      "jsx-a11y",
-      "import"
-    ],
+    "parser": "@typescript-eslint/parser",
     "ignorePatterns": [
       "public",
       "static",
@@ -167,6 +161,11 @@
       "react/jsx-props-no-spreading": "off",
       "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/explicit-module-boundary-types": "off",
+      "@typescript-eslint/ban-ts-comment": "off",
+      "no-use-before-define": "off",
+      "react/require-default-props": "off",
+      "no-param-reassign": "off",
+      "radix": "off",
       "jsx-a11y/anchor-is-valid": [
         "error",
         {
