--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -59,11 +59,12 @@
     "react-twitter-embed": "^3.0.3",
     "react-twitter-widgets": "^1.9.5",
     "react-use": "^13.27.1",
+    "sass": "^1.42.1",
     "schema-dts": "^0.8.2",
     "simple-git": "^2.40.0",
     "styled-components": "^5.3.0",
-    "tailwindcss": "^2.1.2",
-    "twin.macro": "^2.4.1",
+    "tailwindcss": "^2.2.15",
+    "twin.macro": "^2.8.0",
     "typescript": "^4.2.4",
     "url-join": "^4.0.0"
   },
