--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -71,16 +71,11 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "cli-glob": "^0.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^1.17.0",
-    "remark-cli": "^7.0.0",
-    "remark-preset-lint-recommended": "^6.1.1",
-    "source-map-explorer": "^2.5.0",
-    "typescript-eslint-parser": "^22.0.0",
-    "write-good": "^1.0.3"
+    "typescript-eslint-parser": "^22.0.0"
   },
   "keywords": [
     "gatsby"
@@ -90,25 +85,13 @@
   "scripts": {
     "start": "gatsby develop --host 0.0.0.0",
     "develop": "gatsby develop",
-    "dev": "npm run develop",
     "serve": "gatsby serve",
     "build": "gatsby build",
-    "build:pp": "gatsby build --prefix-paths",
-    "build:gh-actions": "npm run build:pp",
-    "deploy": "gatsby-plugin-s3 deploy",
     "clean": "gatsby clean",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "lint:md": "remark content/",
-    "write-good": "write-good $(glob 'content/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
     "format:styles": "prettier '**/*.{css,scss}' --write",
-    "stats:html": "source-map-explorer public/*.js --html public/stats.html",
     "type-check": "tsc --noEmit"
-  },
-  "remarkConfig": {
-    "plugins": [
-      "remark-preset-lint-recommended"
-    ]
   },
   "prettier": {
     "trailingComma": "es5",
