--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,9 +5,9 @@
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
+    "@eligundry/gatsby-source-goodreads": "^1.0.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "axios": "^0.24.0",
     "chart.js": "^3.6.0",
     "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "date-fns": "^2.22.1",
@@ -39,7 +39,6 @@
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-source-lastfm": "^0.1.2",
     "gatsby-transformer-sharp": "^4.0.0",
-    "jsdom": "^17.0.0",
     "lodash": "^4.17.21",
     "postscribe": "^2.0.8",
     "prismjs": "^1.25.0",
@@ -63,7 +62,6 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jsdom": "^16.2.10",
     "@types/lodash": "^4.14.170",
     "@types/react-helmet": "^6.1.2",
     "@types/styled-components": "^5.1.9",
