--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -12,13 +12,13 @@
     "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "date-fns": "^2.22.1",
     "dotenv": "^8.6.0",
-    "gatsby": "^4.0.2",
+    "gatsby": "^4.0.1",
     "gatsby-plugin-catch-links": "^4.0.0",
     "gatsby-plugin-feed": "^4.0.0",
     "gatsby-plugin-google-tagmanager": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-lodash": "^5.0.0",
-    "gatsby-plugin-mdx": "^3.0.0",
+    "gatsby-plugin-mdx": "^3.2.0-next.0",
     "gatsby-plugin-nprogress": "^4.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-remove-trailing-slashes": "^4.0.0",
