--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -72,6 +72,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "gatsby-plugin-netlify": "^4.0.0-next.0",
     "prettier": "^2.4.1",
     "typescript-eslint-parser": "^22.0.0"
   },
