--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -12,54 +12,52 @@
     "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "date-fns": "^2.22.1",
     "dotenv": "^8.6.0",
-    "gatsby": "^4.0.1",
-    "gatsby-plugin-catch-links": "^4.0.0",
-    "gatsby-plugin-feed": "^4.0.0",
-    "gatsby-plugin-google-tagmanager": "^4.0.0",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-lodash": "^5.0.0",
-    "gatsby-plugin-mdx": "^3.0.0",
-    "gatsby-plugin-nprogress": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-remove-trailing-slashes": "^4.0.0",
-    "gatsby-plugin-sass": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-plugin-styled-components": "^5.0.0",
+    "gatsby": "^4.1.0",
+    "gatsby-plugin-catch-links": "^4.1.0",
+    "gatsby-plugin-feed": "^4.1.0",
+    "gatsby-plugin-google-tagmanager": "^4.1.0",
+    "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-lodash": "^5.1.0",
+    "gatsby-plugin-mdx": "^3.1.0",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sass": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-sitemap": "^5.1.0",
+    "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-plugin-ts-config": "^1.1.5",
-    "gatsby-plugin-twitter": "^4.0.0",
+    "gatsby-plugin-twitter": "^4.1.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typescript": "^4.0.0",
+    "gatsby-plugin-typescript": "^4.1.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^5.0.0",
-    "gatsby-remark-images": "^6.0.0",
-    "gatsby-remark-prismjs": "^6.0.0",
-    "gatsby-remark-responsive-iframe": "^5.0.0",
+    "gatsby-remark-copy-linked-files": "^5.1.0",
+    "gatsby-remark-images": "^6.1.0",
+    "gatsby-remark-prismjs": "^6.1.0",
+    "gatsby-remark-responsive-iframe": "^5.1.0",
     "gatsby-source-custom-api": "^2.3.2",
-    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-source-filesystem": "^4.1.0",
     "gatsby-source-lastfm": "^0.1.2",
-    "gatsby-transformer-sharp": "^4.0.0",
+    "gatsby-transformer-sharp": "^4.1.0",
     "lodash": "^4.17.21",
     "postscribe": "^2.0.8",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
-    "react-chartjs-2": "^3.2.0",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.1.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-lazyload": "^3.2.0",
-    "react-schemaorg": "^1.3.1",
+    "react-schemaorg": "^2.0.0",
     "react-tooltip": "^4.2.21",
     "react-use": "^17.3.1",
-    "sass": "^1.42.1",
-    "schema-dts": "^0.8.2",
+    "sass": "^1.43.4",
+    "schema-dts": "^1.0.0",
     "simple-git": "^2.47.0",
     "styled-components": "^5.3.3",
-    "tailwindcss": "^2.2.15",
-    "twin.macro": "^2.8.0",
+    "tailwindcss": "^2.2.19",
+    "twin.macro": "^2.8.1",
     "typescript": "^4.4.4",
-    "url-join": "^4.0.0"
+    "url-join-ts": "^1.0.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
