--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.170",
     "@types/react-helmet": "^6.1.2",
+    "@types/react-lazyload": "^3.1.1",
     "@types/styled-components": "^5.1.9",
     "@types/tailwindcss": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
