--- a/gatsby/tsconfig.json
+++ b/gatsby/tsconfig.json
@@ -13,7 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "downlevelIteration": true
   },
   "include": ["gatsby-types.d.ts", "src", "static", "index.d.ts", "twin.d.ts"]
 }
