--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -6,10 +6,12 @@
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
     "@eligundry/gatsby-source-goodreads": "^1.0.0",
+    "@georgedoescode/fluid-pattern-worklet": "^1.0.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "chart.js": "^3.6.0",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "css-paint-polyfill": "^3.3.0",
     "date-fns": "^2.22.1",
     "dotenv": "^8.6.0",
     "gatsby": "^3.14.5",
