--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -10,34 +10,34 @@
     "@mdx-js/react": "^1.6.22",
     "chart.js": "^3.6.0",
     "chartjs-adapter-date-fns": "^2.0.0",
-    "css-paint-polyfill": "^3.3.0",
-    "date-fns": "^2.22.1",
-    "dotenv": "^8.6.0",
-    "gatsby": "^3.14.5",
-    "gatsby-plugin-catch-links": "^3.14.0",
-    "gatsby-plugin-feed": "^3.14.0",
-    "gatsby-plugin-google-tagmanager": "^3.14.0",
-    "gatsby-plugin-image": "^1.14.2",
-    "gatsby-plugin-lodash": "^4.14.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.3",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-plugin-styled-components": "^4.14.0",
+    "date-fns": "^2.25.0",
+    "dotenv": "^10.0.0",
+    "gatsby": "^4.2.0",
+    "gatsby-plugin-catch-links": "^4.2.0",
+    "gatsby-plugin-feed": "^4.2.0",
+    "gatsby-plugin-google-tagmanager": "^4.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-lodash": "^5.2.0",
+    "gatsby-plugin-mdx": "^3.2.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sass": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-plugin-ts-config": "^1.1.5",
-    "gatsby-plugin-twitter": "^3.14.0",
+    "gatsby-plugin-twitter": "^4.2.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typescript": "^3.14.0",
+    "gatsby-plugin-typescript": "^4.2.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^4.11.0",
-    "gatsby-remark-images": "^5.11.0",
-    "gatsby-remark-prismjs": "^5.11.0",
-    "gatsby-remark-responsive-iframe": "^4.11.0",
+    "gatsby-remark-copy-linked-files": "^5.2.0",
+    "gatsby-remark-images": "^6.2.0",
+    "gatsby-remark-prismjs": "^6.2.0",
+    "gatsby-remark-responsive-iframe": "^5.2.0",
     "gatsby-source-custom-api": "^2.3.2",
-    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-source-filesystem": "^4.2.0",
     "gatsby-source-lastfm": "^0.1.2",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "lodash": "^4.17.21",
     "postscribe": "^2.0.8",
     "prismjs": "^1.25.0",
@@ -46,7 +46,7 @@
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.1.2",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
     "react-loading-skeleton": "^3.0.1",
     "react-schemaorg": "^2.0.0",
@@ -58,15 +58,15 @@
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19",
     "twin.macro": "^2.8.1",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.2",
     "url-join-ts": "^1.0.5"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.170",
-    "@types/react-helmet": "^6.1.2",
+    "@types/lodash": "^4.14.177",
+    "@types/react-helmet": "^6.1.4",
     "@types/react-lazyload": "^3.1.1",
-    "@types/styled-components": "^5.1.9",
-    "@types/tailwindcss": "^2.0.2",
+    "@types/styled-components": "^5.1.15",
+    "@types/tailwindcss": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-plugin-styled-components": "^1.11.1",
