--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -19,7 +19,7 @@
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-lodash": "^5.2.0",
     "gatsby-plugin-mdx": "^3.2.0",
-    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-netlify": "^4.0.0-next.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sass": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
