--- a/gatsby/tsconfig.json
+++ b/gatsby/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -16,5 +16,12 @@
     "jsx": "react",
     "downlevelIteration": true
   },
-  "include": ["gatsby-types.d.ts", "src", "static", "index.d.ts", "twin.d.ts"]
+  "include": [
+    "gatsby-types.d.ts",
+    "src",
+    "static",
+    "index.d.ts",
+    "twin.d.ts",
+    "scripts"
+  ]
 }
