--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -18,7 +18,7 @@ RUN go mod download
 
 # Build the app
 ADD ./api /src
-RUN make static-build
+RUN OUTPUT=/bin make static-build
 
 EXPOSE 8080
 WORKDIR /src
