Add ability to run workflow manually

--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -6,6 +6,9 @@ on:
       - fix-serverless-deploy
     paths:
       - 'api/**'
+      - '.github/**'
+  workflow_dispatch:
+    inputs: {}
 
 jobs:
   api:
