--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -21,6 +21,11 @@ provider:
       - subnet-026cddc40fb470bbc
       - subnet-0e4ce11da300407ad
 
+layers:
+  sqlite:
+    package:
+      artifact: sqliteLayer.zip
+
 functions:
   api:
     handler: bin/api
@@ -31,6 +36,8 @@ functions:
       AUTH_PASSWORD: ${env:AUTH_PASSWORD}
       NETLIFY_BUILD_HOOK: ${env:NETLIFY_BUILD_HOOK}
       DATABASE_PATH: "/mnt/database/api.db"
+    layers:
+      - { Ref: SqliteLambdaLayer }
     events:
       - http:
           path: '/{proxy+}'
