--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -17,32 +17,32 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
+      # - uses: actions/setup-go@v2
+      #   with:
+      #     go-version: 1.17
 
-      - name: actions/cache@v2 (Go Modules)
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+      # - name: actions/cache@v2 (Go Modules)
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: |
+      #       ~/.cache/go-build
+      #       ~/go/pkg/mod
+      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-go-
 
       - uses: bahmutov/npm-install@v1
         with:
           working-directory: api
 
-      - name: Build the API and setup for serverless deploy
-        working-directory: api
-        env:
-          CGO_ENABLED: 1
-        run: |
-          which gcc
-          echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
-          CGO_ENABLED=1 make static-build-api 
+      # - name: Build the API and setup for serverless deploy
+      #   working-directory: api
+      #   env:
+      #     CGO_ENABLED: 1
+      #   run: |
+      #     which gcc
+      #     echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
+      #     CGO_ENABLED=1 make static-build-api 
 
       - name: Deploy to AWS Lambda
         working-directory: api
