--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -13,8 +13,9 @@ provider:
   timeout: 30
   ecr:
     images:
-      api.eligundry.com:
+      api-eligundry-com:
         path: ./
+        name: api-eligundry-com
   iamManagedPolicies:
     - arn:aws:iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess
   vpc:
@@ -28,7 +29,7 @@ provider:
 functions:
   api:
     name: eliGundryApi
-    image: api.eligundry.com
+    image: api-eligundry-com
     description: My personal API
     environment:
       AUTH_USER: ${env:AUTH_USER}
