For the love of god

--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -54,4 +54,4 @@ jobs:
           NETLIFY_BUILD_HOOK: ${{ secrets.NETLIFY_BUILD_HOOK }}
         run: |
           echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
-          serverless deploy
+          ./node_modules/.bin/serverless deploy
