--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/react": "^1.6.22",
     "chart.js": "^3.6.0",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
     "gatsby": "^4.2.0",
