--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -15,15 +15,6 @@ provider:
     images:
       api-eligundry-com:
         path: ./
-  iamManagedPolicies:
-    - arn:aws:iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess
-  vpc:
-    securityGroupIds:
-      - sg-0e3bfc2b96d5cc044
-    subnetIds:
-      - subnet-051997fc3d1383284
-      - subnet-026cddc40fb470bbc
-      - subnet-0e4ce11da300407ad
 
 functions:
   api:
@@ -32,15 +23,32 @@ functions:
       name: api-eligundry-com
     description: My personal API
     environment:
-      AUTH_USER: ${env:AUTH_USER}
-      AUTH_PASSWORD: ${env:AUTH_PASSWORD}
-      NETLIFY_BUILD_HOOK: ${env:NETLIFY_BUILD_HOOK}
-      DATABASE_PATH: "/mnt/database/api.db"
-      GIN_MODE: "release"
+      auth_user: ${env:auth_user}
+      auth_password: ${env:auth_password}
+      netlify_build_hook: ${env:netlify_build_hook}
+      database_path: "/mnt/database/api.db"
+      gin_mode: "release"
     events:
       - http:
           path: '/{proxy+}'
           method: ANY
+    iamManagedPolicies:
+      - arn:aws:iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess
+    vpc:
+      securityGroupIds:
+        - sg-0e3bfc2b96d5cc044
+      subnetIds:
+        - subnet-051997fc3d1383284
+        - subnet-026cddc40fb470bbc
+        - subnet-0e4ce11da300407ad
+
+  staticSiteBuildTrigger:
+    name: staticSiteBuildTrigger
+    image:
+      name: api-eligundry-com
+    description: My personal API
+    environment:
+      netlify_build_hook: ${env:netlify_build_hook}
 
 resources:
   extensions:
