Let's see if we can't get the docker image smaller

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update \
 
 # Install goose for database migrations
 RUN go get github.com/pressly/goose/cmd/goose
+RUN which goose
 
 # Install go dependencies
 WORKDIR /src
@@ -15,8 +16,15 @@ RUN go mod download
 
 # Build the app
 ADD . /src
-RUN OUTPUT_DIR=/bin CGO_ENABLED=1  make static-build
+RUN OUTPUT_DIR=/opt CGO_ENABLED=1  make static-build
 
 EXPOSE 8080
 WORKDIR /src
-ENTRYPOINT ["/bin/api"]
+ENTRYPOINT ["/opt/api"]
+
+FROM scratch
+EXPOSE 8080
+COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
+COPY --from=development /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=development /opt/* /opt/
+ENTRYPOINT ["/opt/api"]
