--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-      - fix-serverless-deploy
+      - smol-docker-image-tests
     paths:
       - 'api/**'
       - '.github/**'
