--- a/next/package.json
+++ b/next/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.0.3",
+    "react-tooltip": "^4.2.21",
     "react-use": "^17.3.2",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19",
-    "twin.macro": "^2.8.2"
+    "twin.macro": "^2.8.2",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
