--- a/next/package.json
+++ b/next/package.json
@@ -18,6 +18,7 @@
     "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^4.0.0",
@@ -26,6 +27,7 @@
     "react": "17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
+    "react-github-calendar": "^3.3.1",
     "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
     "react-lite-yt-embed": "^1.2.7",
@@ -39,6 +41,7 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.180",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
     "@types/styled-components": "^5.1.24",
