--- a/next/package.json
+++ b/next/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.4",
     "next-mdx-remote": "^4.0.0",
     "next-transpile-modules": "^9.0.0",
     "node-cache": "^5.1.2",
