Point the serverless deploy at the right branch

--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -2,8 +2,7 @@ name: Serverless Deploy
 on:
   push:
     branches:
-      - master
-      - fix-serverless-deploy
+      - main
     paths:
       - 'api/**'
       - '.github/**'
