Move GitHubCalendar to SSG + image blurring

--- a/next/package.json
+++ b/next/package.json
@@ -43,9 +43,9 @@
     "postscribe": "^2.0.8",
     "promise-hash": "^1.3.0",
     "react": "17.0.2",
+    "react-activity-calendar": "^1.5.0",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
-    "react-github-calendar": "^3.3.1",
     "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
     "react-lite-yt-embed": "^1.2.7",
