--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -3,7 +3,6 @@ on:
   pull_request:
     branches:
       - main
-      - master
 
 jobs:
   lint:
@@ -16,12 +15,12 @@ jobs:
           node-version: 16
       - uses: bahmutov/npm-install@v1
         with:
-          working-directory: gatsby
+          working-directory: next
       - name: Run linters
         uses: wearerequired/lint-action@v1
         with:
           eslint: true
-          eslint_dir: gatsby
+          eslint_dir: next
 
   type-check:
     name: Check types
@@ -33,7 +32,7 @@ jobs:
           node-version: 16
       - uses: bahmutov/npm-install@v1
         with:
-          working-directory: gatsby
+          working-directory: next
       - name: Check types
         working-directory: gatsby
-        run: npm run type-check
+        run: npm run typecheck
